versioned_docs/version-2.10/reference/goals/test.mdx
---
title: test
description: |
  Run tests.
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

```
pants test [args]
```

Run tests.

Backend: <span className="color--primary">`pants.core`</span>

Config section: <span className="color--primary">`[test]`</span>

<span className={styles.options}>

## Basic options

### `debug`

<Option
  cli_repr={`--[no-]test-debug`}
  env_repr='PANTS_TEST_DEBUG'
  toml_repr={`[test]
debug = <bool>`}
  default_repr={`False`}
>

Run tests sequentially in an interactive process. This is necessary, for example, when you add breakpoints to your code.

</Option>

### `extra_env_vars`

<Option
  cli_repr={`--test-extra-env-vars="['<str>', '<str>', ...]"`}
  env_repr='PANTS_TEST_EXTRA_ENV_VARS'
  toml_repr={`[test]
extra_env_vars = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[]`}
>

Additional environment variables to include in test processes. Entries are strings in the form `ENV_VAR=value` to use explicitly; or just `ENV_VAR` to copy the value of a variable in Pants&#x27;s own environment.

</Option>

### `force`

<Option
  cli_repr={`--[no-]test-force`}
  env_repr='PANTS_TEST_FORCE'
  toml_repr={`[test]
force = <bool>`}
  default_repr={`False`}
>

Force the tests to run, even if they could be satisfied from cache.

</Option>

### `open_coverage`

<Option
  cli_repr={`--[no-]test-open-coverage`}
  env_repr='PANTS_TEST_OPEN_COVERAGE'
  toml_repr={`[test]
open_coverage = <bool>`}
  default_repr={`False`}
>

If a coverage report file is generated, open it on the local system if the system supports this.

</Option>

### `output`

<Option
  cli_repr={`--test-output=<ShowOutput>`}
  env_repr='PANTS_TEST_OUTPUT'
  toml_repr={`[test]
output = <ShowOutput>`}
  one_of='all, failed, none'
  default_repr={`failed`}
>

Show stdout/stderr for these tests.

</Option>

### `use_coverage`

<Option
  cli_repr={`--[no-]test-use-coverage`}
  env_repr='PANTS_TEST_USE_COVERAGE'
  toml_repr={`[test]
use_coverage = <bool>`}
  default_repr={`False`}
>

Generate a coverage report if the test runner supports it.

</Option>

## Advanced options

### `xml_dir`

<Option
  cli_repr={`--test-xml-dir=<DIR>`}
  env_repr='PANTS_TEST_XML_DIR'
  toml_repr={`[test]
xml_dir = <DIR>`}
  default_repr={`None`}
>

Specifying a directory causes Junit XML result files to be emitted under that dir for each test run that supports producing them.

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
